--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
+    <title>TIGER MARTIAL ARTS | Taekwondo ATA, Fitness, Defense y Xtreme </title>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <meta name="description" content="Tiger Martial Arts | Líderes en las Artes Marciales con los mejores programas de para niños, jóvenes y adultos. Prueba GRATIS una clase.">
+    <meta name="keywords" content="ata, taekwondo, martial arts, ata taekwondo, artes marciales, patadas, defensa, defensa personal, cinturon negro, black belt, danes, tiger martial arts">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" href="./media/images/logorecort.jpeg" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/9938b5e9b4.js" crossorigin="anonymous"></script>
@@ -82,11 +86,6 @@
     </div>
     <!-- FOOTER END-->
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
