--- a/pages/programas.html
+++ b/pages/programas.html
@@ -52,7 +52,7 @@
         <img src="../media/images/ata-tigers.png" class="card-img-top" alt="ATA TIGERS">
         <div class="card-body">
         <h5 class="card-title">ATA TIGERS</h5>
-        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit necessitatibus libero molestiae quae non. Cum corrupti modi temporibus sint soluta.</p>
+        <p class="card-text">El programa ATA TIGERS es una forma esencial de mejorar el crecimiento y el desarrollo de los niños en edad preescolar y kinder. Los fundamentos de nuestra moral, valores y rasgos del carácter central se forman en nuestros primeros años.</p>
         <p class="card-text"><small class="text-muted">DE 3 A 6 AÑOS</small></p>
         </div>
     </div>
@@ -60,7 +60,8 @@
         <img src="../media/images/forkids.png" class="card-img-top" alt="FOR KIDS">
         <div class="card-body">
         <h5 class="card-title">FOR KIDS</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, magnam eius. Illo dolores delectus facere eius impedit mollitia quam doloremque?</p>
+        <p class="card-text">El programa ATA Karate for Kids es perfecto para los padres que buscan una actividad que no sólo sea un gran ejercicio, sino que también les enseñe a sus hijos las lecciones que usarán durante toda su vida.
+        </p>
         <p class="card-text"><small class="text-muted">DE 7 A 12 AÑOS</small></p>
     </div>
     </div>
@@ -68,7 +69,7 @@
         <img src="../media/images/adol-adult.png" class="card-img-top" alt="ADOLESCENTES-ADULTOS">
         <div class="card-body">
         <h5 class="card-title">ADOLESCENTES/ADULTOS</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dicta id dolorum doloribus ex nostrum quibusdam. Cupiditate numquam neque quas.</p>
+        <p class="card-text">Los adolescentes y adultos de todas las edades vienen a nosotros y, a través de la perseverancia, logran sus objetivos. Ya sea que esté interesado en el ejercicio físico, la autodefensa o simplemente para divertirse. Incluso si aún no tiene claro lo que desea, aquí podemos guiarlo para que lo descubra.</p>
         <p class="card-text"><small class="text-muted">13 AÑOS Y MÁS</small></p>
         </div>
     </div>
