--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- NAVBAR START-->
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img class="logo" src="../media/images/tiger1.png" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -49,7 +49,7 @@
     <main class="main-form">
         <div class="div-form">
             <form class="bg-form">
-                <h2 class="form-title">¿Tenés alguna duda? Comunicate con nosotros</h2>
+                <h1 class="form-title">contáctanos </h1>
                 <input class="input-form" type="text" name="NOMBRE" maxlength="20" placeholder="NOMBRE">
                 <input class="input-form" type="text" name="LOCALIDAD" maxlength="20" placeholder="LOCALIDAD">
                 <input class="input-form" type="email" name="EMAIL" placeholder="EMAIL">
