--- a/pages/nuestra-mision.html
+++ b/pages/nuestra-mision.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- NAVBAR START-->
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img class="logo" src="../media/images/tiger1.png" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -50,7 +50,7 @@
     <main class="bg-ourmission">
         <div class="om-main">
             <div>
-                <h2 class="om-title">NUESTRA MISIÓN</h2>
+                <h1 class="om-title">NUESTRA MISIÓN</h1>
                 <p class="om-paragraph">Ayudar a mejorar el Mundo desenvolviendo personas física y mentalmente a través de la filosofía de Tiger Martial Arts.
                     Tiger Martial Arts es una escuela de Artes Marciales para toda la familia y está lista para recibir alumnos de todas las franjas etarias. 
                     ¡Ven a conocer nuestro renombrado sistema de enseñanza!
@@ -59,7 +59,7 @@
                     No podemos perder la oportunidad de transformar nuestra vida y la de nuestras familias. Por intermedio de las artes marciales y la diversión, vamos creciendo, paso a paso, para llegar a explotar el potencial que tiene cada uno y lograr en la vida lo que deseamos hacer y, sobre todo, ser.</p>
             </div>
             <div>
-                <iframe class="om-iframe" width="560" height="315" src="https://www.youtube.com/embed/xh9IHnHCc80" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="om-iframe" height="315" src="https://www.youtube.com/embed/xh9IHnHCc80" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </main>
