--- a/pages/programas.html
+++ b/pages/programas.html
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-    <title>TIGER MARTIAL ARTS | Taekwondo ATA, Fitness, Defense y Xtreme </title>
+    <title>TIGER MARTIAL ARTS | Taekwondo ATA, Fitness, Defense y Xtreme</title>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Tiger Martial Arts | Líderes en las Artes Marciales con los mejores programas de para niños, jóvenes y adultos. Prueba GRATIS una clase.">
-    <meta name="keywords" content="ata, taekwondo, martial arts, ata taekwondo, artes marciales, patadas, defensa, defensa personal, cinturon negro, black belt, danes, tiger martial arts">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <meta name="description"
+        content="Tiger Martial Arts | Líderes en las Artes Marciales con los mejores programas de para niños, jóvenes y adultos. Prueba GRATIS una clase." />
+    <meta name="keywords"
+        content="ata, taekwondo, martial arts, ata taekwondo, artes marciales, patadas, defensa, defensa personal, cinturon negro, black belt, danes, tiger martial arts" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" href="./media/images/logorecort.jpeg" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/9938b5e9b4.js" crossorigin="anonymous"></script>
@@ -17,12 +19,12 @@
 </head>
 
 <body>
-<!-- NAVBAR START-->
-    <nav class="navbar navbar-expand-md">
+    <!-- NAVBAR START-->
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img class="logo" src="../media/images/tiger1.png" alt="Logo">
+            <img class="logo" src="../media/images/tiger1.png" alt="Logo" />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
@@ -45,54 +47,78 @@
             </div>
         </div>
     </nav>
-<!-- NAVBAR END-->
-<!-- PROGRAMS START-->
-<div class="card-group">
-    <div class="card">
-        <img src="../media/images/ata-tigers.png" class="card-img-top" alt="ATA TIGERS">
-        <div class="card-body">
-        <h5 class="card-title">ATA TIGERS</h5>
-        <p class="card-text">El programa ATA TIGERS es una forma esencial de mejorar el crecimiento y el desarrollo de los niños en edad preescolar y kinder. Los fundamentos de nuestra moral, valores y rasgos del carácter central se forman en nuestros primeros años.</p>
-        <p class="card-text"><small class="text-muted">DE 3 A 6 AÑOS</small></p>
-        </div>
-    </div>
-    <div class="card">
-        <img src="../media/images/forkids.png" class="card-img-top" alt="FOR KIDS">
-        <div class="card-body">
-        <h5 class="card-title">FOR KIDS</h5>
-        <p class="card-text">El programa ATA Karate for Kids es perfecto para los padres que buscan una actividad que no sólo sea un gran ejercicio, sino que también les enseñe a sus hijos las lecciones que usarán durante toda su vida.
-        </p>
-        <p class="card-text"><small class="text-muted">DE 7 A 12 AÑOS</small></p>
-    </div>
-    </div>
-    <div class="card">
-        <img src="../media/images/adol-adult.png" class="card-img-top" alt="ADOLESCENTES-ADULTOS">
-        <div class="card-body">
-        <h5 class="card-title">ADOLESCENTES/ADULTOS</h5>
-        <p class="card-text">Los adolescentes y adultos de todas las edades vienen a nosotros y, a través de la perseverancia, logran sus objetivos. Ya sea que esté interesado en el ejercicio físico, la autodefensa o simplemente para divertirse. Incluso si aún no tiene claro lo que desea, aquí podemos guiarlo para que lo descubra.</p>
-        <p class="card-text"><small class="text-muted">13 AÑOS Y MÁS</small></p>
-        </div>
-    </div>
-</div>
-<!-- PROGRAMS END-->
-<!-- FOOTER START-->
-<div>
-    <footer class="footer">
-        <div class="container">
-            <div class="social-media">
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+    <!-- NAVBAR END-->
+    <!-- PROGRAMS START-->
+    <div class="card-group">
+        <div class="card">
+            <img src="../media/images/ata-tigers.png" class="card-img-top" alt="ATA TIGERS" />
+            <div class="card-body">
+                <h2 class="card-title">ATA TIGERS</h2>
+                <p class="card-text">
+                    El programa ATA TIGERS es una forma esencial de mejorar el
+                    crecimiento y el desarrollo de los niños en edad preescolar y
+                    kinder. Los fundamentos de nuestra moral, valores y rasgos del
+                    carácter central se forman en nuestros primeros años.
+                </p>
+                <p class="card-text">
+                    <small class="text-muted">DE 3 A 6 AÑOS</small>
+                </p>
             </div>
         </div>
-    <!-- Copyright -->
-        <div class="text-center text-white p-3">
-        © 2022 Copyright: Tiger Martial Arts.
+        <div class="card">
+            <img src="../media/images/forkids.png" class="card-img-top" alt="FOR KIDS" />
+            <div class="card-body">
+                <h2 class="card-title">FOR KIDS</h2>
+                <p class="card-text">
+                    El programa ATA Karate for Kids es perfecto para los padres que
+                    buscan una actividad que no sólo sea un gran ejercicio, sino que
+                    también les enseñe a sus hijos las lecciones que usarán durante toda
+                    su vida.
+                </p>
+                <p class="card-text">
+                    <small class="text-muted">DE 7 A 12 AÑOS</small>
+                </p>
+            </div>
         </div>
-    <!-- Copyright -->
-    </footer> 
-</div>
-<!--FOOTER END -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <div class="card">
+            <img src="../media/images/adol-adult.png" class="card-img-top" alt="ADOLESCENTES-ADULTOS" />
+            <div class="card-body">
+                <h2 class="card-title">ADOLESCENTES/ADULTOS</h2>
+                <p class="card-text">
+                    Los adolescentes y adultos de todas las edades vienen a nosotros y,
+                    a través de la perseverancia, logran sus objetivos. Ya sea que esté
+                    interesado en el ejercicio físico, la autodefensa o simplemente para
+                    divertirse. Incluso si aún no tiene claro lo que desea, aquí podemos
+                    guiarlo para que lo descubra.
+                </p>
+                <p class="card-text">
+                    <small class="text-muted">13 AÑOS Y MÁS</small>
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- PROGRAMS END-->
+    <!-- FOOTER START-->
+    <div>
+        <footer class="footer">
+            <div class="container">
+                <div class="social-media">
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            <!-- Copyright -->
+            <div class="text-center text-white p-3">
+                © 2022 Copyright: Tiger Martial Arts.
+            </div>
+            <!-- Copyright -->
+        </footer>
+    </div>
+    <!--FOOTER END -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
