--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- NAVBAR START-->
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img class="logo" src="../media/images/tiger1.png" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
