correción de paginas

--- a/pages/nuestra-mision.html
+++ b/pages/nuestra-mision.html
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-    <title>TIGER MARTIAL ARTS | Taekwondo ATA, Fitness, Defense y Xtreme </title>
+    <title>TIGER MARTIAL ARTS | Taekwondo ATA, Fitness, Defense y Xtreme</title>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Tiger Martial Arts | Líderes en las Artes Marciales con los mejores programas de para niños, jóvenes y adultos. Prueba GRATIS una clase.">
-    <meta name="keywords" content="ata, taekwondo, martial arts, ata taekwondo, artes marciales, patadas, defensa, defensa personal, cinturon negro, black belt, danes, tiger martial arts">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <meta name="description"
+        content="Tiger Martial Arts | Líderes en las Artes Marciales con los mejores programas de para niños, jóvenes y adultos. Prueba GRATIS una clase." />
+    <meta name="keywords"
+        content="ata, taekwondo, martial arts, ata taekwondo, artes marciales, patadas, defensa, defensa personal, cinturon negro, black belt, danes, tiger martial arts" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" href="./media/images/logorecort.jpeg" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/9938b5e9b4.js" crossorigin="anonymous"></script>
@@ -20,27 +22,17 @@
     <!-- NAVBAR START-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img class="logo" src="../media/images/tiger1.png" alt="Logo">
+            <img class="logo" src="../media/images/tiger1.png" alt="Logo" />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./sobre-nosotros.html">SOBRE NOSOTROS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./nuestra-mision.html">NUESTRA MISIÓN</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./programas.html">PROGRAMAS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">CONTACTOS</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./sobre-nosotros.html">SOBRE NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./nuestra-mision.html">NUESTRA MISIÓN</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./programas.html">PROGRAMAS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">CONTACTOS</a></li>
                 </ul>
             </div>
         </div>
@@ -51,15 +43,29 @@
         <div class="om-main">
             <div>
                 <h1 class="om-title">NUESTRA MISIÓN</h1>
-                <p class="om-paragraph">Ayudar a mejorar el Mundo desenvolviendo personas física y mentalmente a través de la filosofía de Tiger Martial Arts.
-                    Tiger Martial Arts es una escuela de Artes Marciales para toda la familia y está lista para recibir alumnos de todas las franjas etarias. 
-                    ¡Ven a conocer nuestro renombrado sistema de enseñanza!
-                    Nuestros programas están diseñados para ayudarlo a ponerse en forma físicamente, lograr confianza en sí mismo, mejorar las habilidades sociales y aprender a estar seguro. La vida de una persona cambia completamente cuando sus valores son firmes. Ningún niño abandona su sueño, aunque parezca difícil de cumplir, si alguien le enseña lo que es la Perseverancia. Todos los niños pueden tener una vida plena y feliz, tan sólo hace falta que alguien les enseñe el valor de la Honestidad, la importancia de Ser positivo y usar el Respeto consigo mismo y con los demás. 
-                    Las personas tienen éxito fortaleciendo su personalidad y así ganando Seguridad y Confianza para lograr todos los objetivos que se propongan. Cuando logran metas en su vida, la imagen de sí mismo sube, con lo que sube su Autoestima, y así el terreno queda firme para seguir el círculo del éxito.
-                    No podemos perder la oportunidad de transformar nuestra vida y la de nuestras familias. Por intermedio de las artes marciales y la diversión, vamos creciendo, paso a paso, para llegar a explotar el potencial que tiene cada uno y lograr en la vida lo que deseamos hacer y, sobre todo, ser.</p>
-            </div>
-            <div>
-                <iframe class="om-iframe" height="315" src="https://www.youtube.com/embed/xh9IHnHCc80" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="om-flex">
+                    <div class="om-paragraph">
+                        <p>Ayudar a mejorar el Mundo desenvolviendo personas física y
+                            mentalmente a través de la filosofía de Tiger Martial Arts. Tiger
+                            Martial Arts es una escuela de Artes Marciales para toda la familia
+                            y está lista para recibir alumnos de todas las franjas etarias. ¡Ven
+                            a conocer nuestro renombrado sistema de enseñanza!</p>
+                        <p>
+                            Nuestros programas están diseñados para ayudarlo a ponerse en forma físicamente, lograr confianza en sí mismo, mejorar las habilidades sociales y aprender a estar seguro. La vida de una persona cambia completamente cuando sus valores son firmes. Ningún niño abandona su sueño, aunque parezca difícil de cumplir, si alguien le enseña lo que es la Perseverancia. Todos los niños pueden tener una vida plena y feliz, tan sólo hace falta que alguien les enseñe el valor de la Honestidad, la importancia de Ser positivo y usar el Respeto consigo mismo y con los demás.
+                        </p>
+                        <p>
+                            Las personas tienen éxito fortaleciendo su personalidad y así ganando seguridad y confianza para lograr todos los objetivos que se propongan. Cuando logran metas en su vida, la imagen de sí mismo sube, con lo que sube su Autoestima, y así el terreno queda firme para seguir el círculo del éxito. No podemos perder la oportunidad de transformar nuestra vida y la de nuestras familias. 
+                        </p>
+                        <p>Por intermedio de las artes marciales y la diversión, vamos creciendo, paso a paso, para llegar a explotar el potencial que tiene cada uno y lograr en la vida lo que deseamos hacer y, sobre todo, ser.
+                        </p>
+                    </div>
+                    <div>
+                        <iframe class="om-iframe" height="315" src="https://www.youtube.com/embed/xh9IHnHCc80"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -74,14 +80,17 @@
                     <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
-        <!-- Copyright -->
+            <!-- Copyright -->
             <div class="text-center text-white p-3">
-            © 2022 Copyright: Tiger Martial Arts.
+                © 2022 Copyright: Tiger Martial Arts.
             </div>
-        <!-- Copyright -->
-        </footer> 
+            <!-- Copyright -->
+        </footer>
     </div>
     <!--FOOTER END -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
