--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -26,21 +26,11 @@
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./sobre-nosotros.html">SOBRE NOSOTROS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./nuestra-mision.html">NUESTRA MISIÓN</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./programas.html">PROGRAMAS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">CONTACTOS</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./sobre-nosotros.html">SOBRE NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./nuestra-mision.html">NUESTRA MISIÓN</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./programas.html">PROGRAMAS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">CONTACTOS</a></li>
                 </ul>
             </div>
         </div>
@@ -50,7 +40,11 @@
     <div class="bg-au">
         <div>
             <h1 class="au-title">NUESTRA ORGANIZACIÓN</h1>
-            <p class="au-paragraph">A comienzos del año 2005, el Prof. Agustín Spiess (actualmente Maestro 7mo Dan) regresó de los EEUU, luego de un año de trabajar en las escuelas de Chief Master Cesar Ozuna (Presidente de ATA en América del Sur), en la ciudad de Miami, Florida. Tras dos años de restructuración e implementación de nuevos sistemas en sus escuelas de Resistencia Chaco, Argentina, y comenzar a ver excelentes resultados, se vio en la necesidad de compartir con otros instructores las experiencias positivas que él mismo estaba experimentando y de ese modo darles la oportunidad de crecer y de sentir que con trabajo y una buena guía, se pueden alcanzar todas las metas. En poco tiempo fueron muchos los instructores que se fueron acercando, con intenciones de formar parte de este nuevo grupo; algunos de ellos eran muy antiguos y con mucha experiencia en la enseñanza, como ser el caso de los Profesores (Sr. Alejandro Ricotti, Sr. Fredy Giménez, Sr. Sergio Tejada, Sr. Damián Yaskowiak, Sr. Eduardo Ortíz y el Sr. Gerardo Di Meo) y otros estaban recién comenzando. También fue de vital importancia todo el aporte recibido por el Prof.. Maximiliano Infantino, de la ciudad de Mar del Plata (hoy Prof. 6to Dan) quien fuera uno de los primeros alumnos de la STF en la Argentina y también sumara conocimientos en los EEUU, luego de residir allí durante 4 años. Hoy con más de cincuenta escuelas en todo el país, y un gran número de instructores, Songahm Argentina se ha consolidado y sigue en constante crecimiento, dando una enorme oportunidad a aquellos instructores y alumnos que desean ser parte de esta gran familia.</p>
+            <div class="au-paragraph">
+                <p>A comienzos del año 2005, el Prof. Agustín Spiess (actualmente Maestro 7mo Dan) regresó de los EEUU, luego de un año de trabajar en las escuelas de Chief Master Cesar Ozuna (Presidente de ATA en América del Sur), en la ciudad de Miami, Florida. Tras dos años de restructuración e implementación de nuevos sistemas en sus escuelas de Resistencia Chaco, Argentina, y comenzar a ver excelentes resultados, se vio en la necesidad de compartir con otros instructores las experiencias positivas que él mismo estaba experimentando y de ese modo darles la oportunidad de crecer y de sentir que con trabajo y una buena guía, se pueden alcanzar todas las metas.</p>
+                <p>En poco tiempo fueron muchos los instructores que se fueron acercando, con intenciones de formar parte de este nuevo grupo; algunos de ellos eran muy antiguos y con mucha experiencia en la enseñanza, como ser el caso de los Profesores (Sr. Alejandro Ricotti, Sr. Fredy Giménez, Sr. Sergio Tejada, Sr. Damián Yaskowiak, Sr. Eduardo Ortíz y el Sr. Gerardo Di Meo) y otros estaban recién comenzando. También fue de vital importancia todo el aporte recibido por el Prof.. Maximiliano Infantino, de la ciudad de Mar del Plata (hoy Prof. 6to Dan) quien fuera uno de los primeros alumnos de la STF en la Argentina y también sumara conocimientos en los EEUU, luego de residir allí durante 4 años.</p>
+                <p>Hoy con más de cincuenta escuelas en todo el país, y un gran número de instructores, Songahm Argentina se ha consolidado y sigue en constante crecimiento, dando una enorme oportunidad a aquellos instructores y alumnos que desean ser parte de esta gran familia.</p>
+            </div>
         </div>
     </div>
     <div class="container-fluid images">
