--- a/pages/programas.html
+++ b/pages/programas.html
@@ -51,7 +51,7 @@
     <!-- PROGRAMS START-->
     <div class="card-group">
         <div class="card">
-            <img src="../media/images/ata-tigers.png" class="card-img-top" alt="ATA TIGERS" />
+            <img src="../media/images/ata-tigers.jpg" class="card-img-top" alt="ATA TIGERS" />
             <div class="card-body">
                 <h2 class="card-title">ATA TIGERS</h2>
                 <p class="card-text">
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../media/images/forkids.png" class="card-img-top" alt="FOR KIDS" />
+            <img src="../media/images/forkids.jpg" class="card-img-top" alt="FOR KIDS" />
             <div class="card-body">
                 <h2 class="card-title">FOR KIDS</h2>
                 <p class="card-text">
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../media/images/adol-adult.png" class="card-img-top" alt="ADOLESCENTES-ADULTOS" />
+            <img src="../media/images/adol-adult.jpg" class="card-img-top" alt="ADOLESCENTES-ADULTOS" />
             <div class="card-body">
                 <h2 class="card-title">ADOLESCENTES/ADULTOS</h2>
                 <p class="card-text">
