--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         <footer class="footer">
             <div class="container">
                 <div class="social-media">
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram" alt="instagram"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square" alt="facebook"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" alt="youtube"></i></a>
                 </div>
             </div>
         <!-- Copyright -->
