--- a/index.html
+++ b/index.html
@@ -18,28 +18,18 @@
 <body>
     <!-- NAVBAR START-->
     <nav class="navbar navbar-expand-lg">
-        <img class="logo" src="./media/images/tiger1.png" alt="Logo">
+        <img class="logo" src="./media/images/tiger1.jpg" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
             </button>
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="./index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/sobre-nosotros.html">SOBRE NOSOTROS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/nuestra-mision.html">NUESTRA MISIÓN</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/programas.html">PROGRAMAS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/contacto.html">CONTACTOS</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/sobre-nosotros.html">SOBRE NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/nuestra-mision.html">NUESTRA MISIÓN</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/programas.html">PROGRAMAS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">CONTACTOS</a></li>
                 </ul>
             </div>
         </div>
@@ -101,11 +91,9 @@
                     <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" alt="youtube"></i></a>
                 </div>
             </div>
-        <!-- Copyright -->
             <div class="text-center text-white">
             © 2022 Copyright: Tiger Martial Arts.
             </div>
-        <!-- Copyright -->
         </footer> 
     </div>
     <!--FOOTER END -->
