--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,27 +19,17 @@
     <!-- NAVBAR START-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img class="logo" src="../media/images/tiger1.png" alt="Logo">
+            <img class="logo" src="../media/images/tiger1.jpg" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./sobre-nosotros.html">SOBRE NOSOTROS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./nuestra-mision.html">NUESTRA MISIÓN</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./programas.html">PROGRAMAS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">CONTACTOS</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./sobre-nosotros.html">SOBRE NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./nuestra-mision.html">NUESTRA MISIÓN</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./programas.html">PROGRAMAS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">CONTACTOS</a></li>
                 </ul>
             </div>
         </div>
@@ -49,13 +39,13 @@
     <main class="main-form">
         <div class="div-form">
             <form class="bg-form">
-                <h1 class="form-title">contáctanos </h1>
+                <h1 class="form-title">contacto </h1>
                 <input class="input-form" type="text" name="NOMBRE" maxlength="20" placeholder="NOMBRE">
                 <input class="input-form" type="text" name="LOCALIDAD" maxlength="20" placeholder="LOCALIDAD">
-                <input class="input-form" type="email" name="EMAIL" placeholder="EMAIL">
+                <input class="input-form" type="email" name="EMAIL" placeholder="EMAIL" required>
                 <input class="input-form" type="text" name="TELÉFONO" placeholder="TELÉFONO">
                 <textarea class="textarea" name="MENSAJE" placeholder="MENSAJE" cols="34" rows="10"></textarea>
-                <button class="button-form" type="button">ENVIAR</button>
+                <button class="button-form" type="submit">ENVIAR</button>
             </form>
         </div>
         <div>
@@ -73,11 +63,9 @@
                     <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" alt="youtube"></i></a>
                 </div>
             </div>
-        <!-- Copyright -->
             <div class="text-center text-white p-3">
             © 2022 Copyright: Tiger Martial Arts.
             </div>
-        <!-- Copyright -->
         </footer> 
     </div>
     <!--FOOTER END -->
