--- a/pages/nuestra-mision.html
+++ b/pages/nuestra-mision.html
@@ -22,7 +22,7 @@
     <!-- NAVBAR START-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img class="logo" src="../media/images/tiger1.png" alt="Logo" />
+            <img class="logo" src="../media/images/tiger1.jpg" alt="Logo" />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -80,11 +80,9 @@
                     <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" alt="youtube"></i></a>
                 </div>
             </div>
-            <!-- Copyright -->
             <div class="text-center text-white p-3">
                 © 2022 Copyright: Tiger Martial Arts.
             </div>
-            <!-- Copyright -->
         </footer>
     </div>
     <!--FOOTER END -->
