--- a/pages/programas.html
+++ b/pages/programas.html
@@ -22,27 +22,17 @@
     <!-- NAVBAR START-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img class="logo" src="../media/images/tiger1.png" alt="Logo" />
+            <img class="logo" src="../media/images/tiger1.jpg" alt="Logo" />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./sobre-nosotros.html">SOBRE NOSOTROS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./nuestra-mision.html">NUESTRA MISIÓN</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./programas.html">PROGRAMAS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">CONTACTOS</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./sobre-nosotros.html">SOBRE NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./nuestra-mision.html">NUESTRA MISIÓN</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./programas.html">PROGRAMAS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">CONTACTOS</a></li>
                 </ul>
             </div>
         </div>
