--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -20,7 +20,7 @@
     <!-- NAVBAR START-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img class="logo" src="../media/images/tiger1.png" alt="Logo">
+            <img class="logo" src="../media/images/tiger1.jpg" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
             </button>
