--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- NAVBAR START-->
     <nav class="navbar navbar-expand-lg">
         <img class="logo" src="./media/images/tiger1.jpg" alt="Logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" alt="nav">
             <span class="navbar-toggler-icon"></span>
             </button>
         <div class="container-fluid">
@@ -86,9 +86,9 @@
         <footer class="footer">
             <div class="container">
                 <div class="social-media">
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram" alt="instagram"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square" alt="facebook"></i></a>
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" alt="youtube"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram" name="instagram"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square" name="facebook"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" name="youtube"></i></a>
                 </div>
             </div>
             <div class="text-center text-white">
