--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img class="logo" src="../media/images/tiger1.jpg" alt="Logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"  alt="nav">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -39,7 +39,7 @@
     <main class="main-form">
         <div class="div-form">
             <form class="bg-form">
-                <h1 class="form-title">contacto </h1>
+                <h1 class="form-title">contacto</h1>
                 <input class="input-form" type="text" name="NOMBRE" maxlength="20" placeholder="NOMBRE">
                 <input class="input-form" type="text" name="LOCALIDAD" maxlength="20" placeholder="LOCALIDAD">
                 <input class="input-form" type="email" name="EMAIL" placeholder="EMAIL" required>
@@ -49,7 +49,7 @@
             </form>
         </div>
         <div>
-            <iframe class="iframe-contact" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3291.42711425348!2d-58.699568799999994!3d-34.415904499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bca19ba8c03b91%3A0xd5627b129d13478c!2sAv.%20Gral.%20Juan%20Domingo%20Per%C3%B3n%206507%2C%20B1621%20Benavidez%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1664421937539!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="iframe-contact" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3291.42711425348!2d-58.699568799999994!3d-34.415904499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bca19ba8c03b91%3A0xd5627b129d13478c!2sAv.%20Gral.%20Juan%20Domingo%20Per%C3%B3n%206507%2C%20B1621%20Benavidez%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1664421937539!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" name="mapa"></iframe>
         </div>
     </main>
     <!-- CONTACT END-->
@@ -58,9 +58,9 @@
         <footer class="footer">
             <div class="container">
                 <div class="social-media">
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram" alt="instagram"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square" alt="facebook"></i></a>
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" alt="youtube"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram" name="instagram"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square" name="facebook"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" name="youtube"></i></a>
                 </div>
             </div>
             <div class="text-center text-white p-3">
