imagenes del carrousel

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./media/images/autoestima.png" class="d-block w-100" alt="autoestima">
+                <img src="./media/images/autoestima.jpg" class="d-block w-100" alt="autoestima">
             </div>
             <div class="carousel-item">
-                <img src="./media/images/comunicacion.png" class="d-block w-100" alt="comunicacion">
+                <img src="./media/images/comunicacion.jpg" class="d-block w-100" alt="comunicacion">
             </div>
             <div class="carousel-item">
                 <img src="./media/images/Confianza.png" class="d-block w-100" alt="Confianza">
