optimizacion de imagenes de fondo

--- a/pages/nuestra-mision.html
+++ b/pages/nuestra-mision.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img class="logo" src="../media/images/tiger1.jpg" alt="Logo" />
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"  name="nav">
+            <button class="navbar-toggler" name="navegacion" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -75,9 +75,9 @@
         <footer class="footer">
             <div class="container">
                 <div class="social-media">
-                    <a name="instagram" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a name="facebook" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                    <a name="youtube" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/" name="fotos" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/" name="informacion" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.youtube.com/" name="videos" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="text-center text-white p-3">
